distribution/oidc-auth/overlays/dex/oauth2-proxy-signout-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: oauth2-proxy-logout
  namespace: auth
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - kubeflow.localhost
  http:
  - match:
    - uri:
        prefix: /logout
    rewrite:
      uri: "/oauth2/sign_out"
    route:
    - destination:
        host: oauth2-proxy.auth.svc.cluster.local
        port:
          number: 4180
